# connect4

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: board.py  game.py  player.py  win_checker.py
